test/parse/module/bad-start-too-many.txt
;;; ERROR: 1
(module
  (start 0)
  (start 1)
  (func)
  (func))
(;; STDERR ;;;
out/test/parse/module/bad-start-too-many.txt:4:4: error: only one start function allowed
  (start 1)
   ^^^^^
;;; STDERR ;;)
